# api_doc.yaml
@@ -7,12 +7,13 @@ servers:
   - url: 'http://localhost'
     description: 'Локальный сервер для разработки'
 paths:
-  /api/auth/login:
+  /api/{version}/auth/login:
     post:
       tags:
         - auth
       parameters:
         - $ref: '#/components/parameters/X-Requested-With'
+        - $ref: '#/components/parameters/Version'
       summary: 'Авторизация пользователя'
       description: 'Авторизация по логину и паролю. Выдаёт токен, который нужно будет передавать при запросах'
       operationId: 'auth_login'
@@ -36,7 +37,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Unauthenticated'
 
-  /api/auth/me:
+  /api/{version}/auth/me:
     post:
       tags:
         - auth
@@ -46,6 +47,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/X-Requested-With'
         - $ref: '#/components/parameters/AuthHeader'
+        - $ref: '#/components/parameters/Version'
       responses:
         200:
           description: Получение данных пользователя
@@ -61,13 +63,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/Unauthenticated'
 
-  /api/auth/logout:
+  /api/{version}/auth/logout:
     post:
       tags:
         - auth
       parameters:
         - $ref: '#/components/parameters/X-Requested-With'
         - $ref: '#/components/parameters/AuthHeader'
+        - $ref: '#/components/parameters/Version'
       summary: 'Выход пользователя'
       description: 'Инвалидация переданного токена'
       operationId: 'auth_logout'
@@ -85,13 +88,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/Unauthenticated'
 
-  /api/auth/refresh:
+  /api/{version}/auth/refresh:
     post:
       tags:
         - auth
       parameters:
         - $ref: '#/components/parameters/X-Requested-With'
         - $ref: '#/components/parameters/AuthHeader'
+        - $ref: '#/components/parameters/Version'
       summary: 'Запрос на обновление токена'
       description: Обновляет токен пользователя
       operationId: 'auth_refresh'
